[Version] 2.2.7 stable [Fix] - Unable to create sub-questions in question group